--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,15 @@ body {
   width: 100%;
   height: 100%;
   background: var(--light-grayish-cyan);
+  display: flex;
+  flex-direction: column;
 }
 
 .card {
   position: relative;
   background-color: white;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   width: 95%;
   height: 250px;
   border-radius: 10px;
@@ -69,6 +71,7 @@ body {
 
 .card-container {
   margin-top: 30px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -139,4 +142,81 @@ body {
 .header-title {
   font-size: 0.8em;
   display: flex;
+}
+
+.search-find {
+  width: 60%;
+  /* height: 200px; */
+  background-color: red;
+  border-radius: 10px;
+  min-height: 120px;
+  max-height: 200px;
+}
+
+.search-parameter {
+  display: flex;
+  width: fit-content;
+  flex-direction: row;
+  justify-content: center;
+  height: 30px;
+  font-size: 0.7em;
+  font-weight: 800;
+  margin-top: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.search-parameter__title {
+  background-color: var(--light-grayish);
+  color: var(--desaturated-dark-cyan);
+  padding: 10px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+.search-parameter__button {
+  background-color: var(--desaturated-dark-cyan);
+  font-weight: 700;
+  color: white;
+  border-radius: 0;
+  outline: none;
+  border: 0;
+  padding: 10px;
+  border-bottom-right-radius: 3px;
+  border-top-right-radius: 3px;
+}
+.parameters-filter--deactive {
+  display: none;
+}
+.parameters-filter--active {
+  display: flex;
+}
+.parameters-filter {
+  background: white;
+  width: 80%;
+  box-shadow: 0 1px 16px -11px black;
+  border-radius: 10px;
+  margin-top: -22px;
+  margin-left: 38px;
+}
+.parameter-filter__right {
+  width: 70%;
+}
+.parameter-filter__left {
+  height: 90px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.parameter-filter__left-button {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  border: 0;
+  background-color: white;
+  font-weight: 700;
+  color: var(--dark-grayish-cyan);
 }
