--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,17 @@ body {
   box-sizing: border-box;
   padding: 20px 20px 0 20px;
   width: 95%;
-  height: 250px;
+  height: 265px;
   border-radius: 10px;
   box-shadow: 0 0.6px 4px -3px black;
   margin-top: 40px;
 }
 
-.header-title {
+.card-body-container__header-title {
   color: var(--desaturated-dark-cyan);
   font-weight: 700;
+  /* margin-top: 20px; */
+  margin-bottom: 10px;
 }
 .header-title__new {
   background-color: var(--desaturated-dark-cyan);
@@ -70,7 +72,7 @@ body {
 }
 
 .card-container {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
@@ -98,7 +100,7 @@ body {
 
 .card-body-logo {
   position: absolute;
-  bottom: 200px;
+  bottom: 230px;
 }
 
 .btn {
@@ -110,10 +112,6 @@ body {
   border: none;
   font-weight: 700;
   border-radius: 5px;
-}
-
-.card-body-container {
-  margin-top: 30px;
 }
 
 .card-body-container__contract {
@@ -139,7 +137,7 @@ body {
   margin-bottom: 10px;
 }
 
-.header-title {
+.card-body-container__header-title {
   font-size: 0.8em;
   display: flex;
 }
@@ -151,6 +149,11 @@ body {
   border-radius: 10px;
   min-height: 120px;
   max-height: 200px;
+}
+
+.card-body-container {
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .search-parameter {
@@ -219,4 +222,79 @@ body {
   background-color: white;
   font-weight: 700;
   color: var(--dark-grayish-cyan);
+}
+
+@media screen and (min-width: 767px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .header {
+    background-image: url('../images/bg-header-desktop.svg');
+  }
+  .card {
+    padding: 20px;
+    height: auto;
+  }
+  .card-body-tags {
+    border-top: 0;
+  }
+  .card-body-logo {
+    position: relative;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+  }
+
+  .card-body-container__title {
+    user-select: none;
+  }
+  .card-body-logo__img {
+    width: 100px;
+  }
+
+  .card-body {
+    flex-direction: row;
+  }
+  .card-body-tags {
+    align-items: flex-start;
+    justify-content: flex-end;
+    margin-right: auto;
+  }
+  .card-body-container {
+    width: 50%;
+  }
+  .parameters-filter {
+    margin-left: 0;
+  }
+  .parameter-filter__right {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+  }
+  .parameter-filter__left {
+    height: auto;
+  }
+  .card-container {
+    width: 80%;
+  }
+  .parameter-filter__left-button{
+    width: 200px;
+  }
+  .card-body-container__title:hover {
+    color: var(--desaturated-dark-cyan);
+  }
+  .btn:hover {
+    background-color: var(--desaturated-dark-cyan);
+    color: white;
+  }
+  .search-parameter__button:hover {
+    background-color: var(--very-dark-grayish-cyan);
+  }
+  .parameter-filter__left-button:hover{
+    color:var(--desaturated-dark-cyan)
+  }
 }
